2005-01-31  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/Makefile.am
	* themes/Default/images/tools/stock-tool-new-rect-select-16.png
	* themes/Default/images/tools/stock-tool-new-rect-select-22.png
	* libgimpwidgets/gimpstock.[ch]: removed the new icon again;
	there's no point in adding a stock icon temporarily.

	* app/tools/gimpnewrectselecttool.c: changed accordingly.

2005-01-31  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpnewrectselecttool.[ch]: new rectangle select tool

	* app/tools/Makefile.am
	* app/tools/gimp-tools.c: add it to toolbox

	* app/tools/gimpselectionoptions.[ch]: set its options
	
	* themes/Default/images/tools/stock-tool-new-rect-select-16.png
	* themes/Default/images/tools/stock-tool-new-rect-select-22.png:
	toolbox icon
	
	* libgimpwidgets/gimpstock.[ch]
	* themes/Default/images/Makefile.am: add the toolbox icon

2005-01-31  Michael Natterer  <mitch@gimp.org>

	Some cleanup to make plug-in menu creation less hackish and
	finally enable registering plug-in menu entries in much more UI
	managers (not only in the image and toolbox menus):

	* app/menus/menus.c: added a <Toolbox> UI manager instead of
	creating the toolbox menu from the <Image> UI manager.

	* app/widgets/gimpimagedock.[ch]: removed the ui_manager and the
	signal connections to update it...

	* app/widgets/gimpdock.[ch]: ...and added them here so all docks
	have their own UI manager. Determine which manager to create from
	looking at GimpDockClass::ui_manager_name (defaults to <Dock>).

	* app/widgets/gimptoolbox.c: set ui_manager_name to <Toolbox> and
	use the UI manager created by our parent class instead of using
	the <Image> one.

	(toolbox_create_tools): use gimp_action_get_accel_closure()
	instead of doing evil hacks.

	* app/gui/gui-vtable.c
	* app/menus/plug-in-menus.c: removed lots of special casing of the
	<Image> UI manager. The code is almost ready for allowing plug-in
	menus under <Layers>, <Channels>, <Brushes> etc.
